<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CronoGasto</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buscar">Buscar...</string>
    <string name="tituloApp">cronogastoapp</string>
    <string name="title_activity_insertar_cg">InsertarCG</string>
    <string name="nuevoCG">Nuevo CronoGasto</string>
    <string name="guardar">Guardar</string>
    <string name="nombreCG">Nombre</string>
    <string name="descricionCG">Descripción</string>
    <string name="title_activity_detalle_cg">DetalleCG</string>
    <string name="concepto">Concepto</string>
    <string name="importe">Importe</string>
    <string name="anadir_gasto">Añadir gasto</string>
    <string name="anadir_ingreso">Añadir ingreso</string>
    <string name="total_gastado">Total gastado:</string>
    <string name="total_ingresado">Total Ingresado:</string>
    <string name="ingresos">INGRESOS</string>
    <string name="gastos">GASTOS</string>
    <string name="balance">BALANCE</string>
    <string name="title_activity_ingresos_cg">IngresosCG</string>
    <string name="title_activity_balance">Balance</string>
    <string name="balanceI">INGRESOS:</string>
    <string name="balanceG">GASTOS:</string>

</resources>
