<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.frios.cronogasto.DetalleCG">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout11"
        android:weightSum="5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:padding="3dp"
            android:onClick="back">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView5"
                android:src="@drawable/back" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textNombreCGDetalleCG"
                android:textSize="25sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:text="@string/nombreCG"
                android:textColor="@color/gasto" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout11"
        android:layout_centerHorizontal="true"
        android:background="@color/negro"
        android:id="@+id/linearLayout12"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout12"
        android:gravity="center"
        android:background="@color/transparente"
        android:weightSum="4"
        android:id="@+id/linearLayout13"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha"
                android:id="@+id/textFechaCGDetalleCG"
                android:textColor="@color/gasto" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/blanco">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editConceptoCGDetalleCG"
                android:hint="@string/concepto" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/blanco"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editImporteCGDetalleCG"
                android:hint="@string/importe" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anadir_gasto"
                android:id="@+id/btn_anadirGasto"
                android:background="@color/gasto"
                android:onClick="insertarGasto" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout13"
        android:background="@color/negro"
        android:id="@+id/linearLayout14"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout14"
        android:gravity="center"
        android:padding="10dp"
        android:weightSum="2"
        android:id="@+id/linearLayout15">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_gastado"
                android:id="@+id/textView5"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1098.14€"
                android:id="@+id/textTotalGastadoDetalleCG"
                android:textSize="25sp"
                android:textColor="@color/gasto" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout15"
        android:background="#000"
        android:id="@+id/linearLayout16"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/gasto"
        android:weightSum="3"
        android:gravity="center"
        android:id="@+id/linearLayout17">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/gastos_activado"
            android:id="@+id/layoutGastosDetalleCG">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gastos"
                android:id="@+id/textView7" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/layoutIngresosDetalleCG"
            android:onClick="irIngresos">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresos"
                android:id="@+id/textView8" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/layoutBalanceIngresos"
            android:onClick="irBalance">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:id="@+id/textView9" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listG"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout16"
        android:layout_above="@+id/linearLayout17" />

</RelativeLayout>
