<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="es.frios.cronogasto.Balance">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout18"
        android:weightSum="5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:padding="3dp"
            android:onClick="back" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView8"
                android:src="@drawable/back" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textNombreCGBalanceCG"
                android:textSize="25sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:text="@string/nombreCG"
                android:textColor="@color/ppal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/ingreso"
        android:weightSum="3"
        android:gravity="center"
        android:id="@+id/linearLayout22"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/ppal"
            android:id="@+id/linearLayout19"
            android:onClick="irGastos" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gastos"
                android:id="@+id/textView10" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/linearLayout20"
            android:background="@color/ppal"
            android:onClick="irIngresos">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresos"
                android:id="@+id/textView11" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/linearLayout21"
            android:background="@color/ppal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:id="@+id/textView12" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout18"
        android:layout_centerHorizontal="true"
        android:background="#000"
        android:id="@+id/linearLayout23"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:gravity="center"
        android:background="@color/transparente"
        android:layout_below="@+id/linearLayout23"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout24">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"
            android:text="@string/balanceI" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textIngresosBalance"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"
            android:text="@string/balanceG" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textGastosBalance"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:id="@+id/linearLayout25"
        android:layout_below="@+id/linearLayout24"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout24"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:gravity="center"
        android:id="@+id/linearLayout26">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1135€"
            android:id="@+id/textTotalBalance"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:id="@+id/linearLayout27"
        android:layout_below="@+id/linearLayout26"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
