<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.frios.cronogasto.InsertarCG">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout5"
        android:weightSum="5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:padding="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/back"
                android:onClick="backButton" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloApp"
                android:id="@+id/textView"
                android:textSize="25sp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true"
        android:background="@color/negro"
        android:id="@+id/linearLayout6"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout6"
        android:background="@color/ppal"
        android:padding="10dp"
        android:gravity="center"
        android:id="@+id/linearLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevoCG"
            android:id="@+id/textView2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="15dp"
        android:id="@+id/linearLayout8"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha"
            android:id="@+id/textFechaCGInsertarCG"
            android:textColor="@color/ppal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/linearLayout8"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout9"
        android:weightSum="2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreCG"
                android:id="@+id/textView3"
                android:textSize="20sp"
                android:textColor="@color/ppal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editNombreCGInsertarCG"
                android:layout_weight="1"
                android:hint="Nombre" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/linearLayout9"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout10"
        android:weightSum="4">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricionCG"
                android:id="@+id/textView4"
                android:textSize="20sp"
                android:textColor="@color/ppal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="15dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/editDescripcionCGInsertarCG"
                android:layout_weight="1"
                android:hint="Descripción..." />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:padding="15dp"
        android:layout_below="@+id/linearLayout10"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:id="@+id/btnGuardarCGInsertarCG"
            android:background="@color/ppal"
            android:onClick="insertarCG" />
    </LinearLayout>

</RelativeLayout>
